--- a/In Working/index.html
+++ b/In Working/index.html
@@ -24,6 +24,8 @@
 
     <link rel="stylesheet" href="libs/slick/slick-theme.css">
     <link rel="stylesheet" href="libs/slick/slick.css">
+    <link rel="stylesheet" href="css/jquery.formstyler.theme.css">
+    <link rel="stylesheet" href="css/jquery.formstyler.css">
 
     <link rel="stylesheet" href="css/main.css">
 
@@ -223,48 +225,232 @@
                     <div class="accordion__body">
                         <ul class="sidebar-list">
                             <li class="sidebar-list__item">
-                                <input type="checkbox">
-                                <label for="">Bags</label>
+                                <input type="checkbox" class="styler" id="sidebar-list__text1">
+                                <label for="sidebar-list__text1">Bags</label>
                             </li>
                             <li class="sidebar-list__item">
-                                <input type="checkbox">
-                                <label for="">Belts Hats</label>
+                                <input type="checkbox" class="styler" id="sidebar-list__text2">
+                                <label for="sidebar-list__text2">Belts Hats</label>
                             </li>
                             <li class="sidebar-list__item">
-                                <input type="checkbox">
-                                <label for="">Scarves & Gloves</label>
+                                <input type="checkbox" class="styler" id="sidebar-list__text3">
+                                <label for="sidebar-list__text3">Scarves & Gloves</label>
                             </li>
                             <li class="sidebar-list__item">
-                                <input type="checkbox">
-                                <label for="">Sunglasses</label>
+                                <input type="checkbox" class="styler" id="sidebar-list__text4">
+                                <label for="sidebar-list__text4">Sunglasses</label>
                             </li>
                             <li class="sidebar-list__item">
-                                <input type="checkbox">
-                                <label for="">Watches</label>
+                                <input type="checkbox" class="styler" id="sidebar-list__text5">
+                                <label for="sidebar-list__text5">Watches</label>
                             </li>
                             <li class="sidebar-list__item">
-                                <input type="checkbox">
-                                <label for="">Wallets</label>
+                                <input type="checkbox" class="styler" id="sidebar-list__text6">
+                                <label for="sidebar-list__text6">Wallets</label>
                             </li>
                             <li class="sidebar-list__item">
-                                <input type="checkbox">
-                                <label for="">Boat Shoes</label>
+                                <input type="checkbox" class="styler" id="sidebar-list__text7">
+                                <label for="sidebar-list__text7">Boat Shoes</label>
                             </li>
                             <li class="sidebar-list__item">
-                                <input type="checkbox">
-                                <label for="">Boots</label>
+                                <input type="checkbox" class="styler" id="sidebar-list__text8">
+                                <label for="sidebar-list__text8">Boots</label>
                             </li>
                             <li class="sidebar-list__item">
-                                <input type="checkbox">
-                                <label for="">Deserts & Chukkas</label>
+                                <input type="checkbox" class="styler" id="sidebar-list__text9">
+                                <label for="sidebar-list__text9">Deserts & Chukkas</label>
                             </li>
                             <li class="sidebar-list__item">
-                                <input type="checkbox">
-                                <label for="">Espadrilles & Sandals</label>
+                                <input type="checkbox" class="styler" id="sidebar-list__text10">
+                                <label for="sidebar-list__text10">Espadrilles & Sandals</label>
                             </li>
                             <li class="sidebar-list__item">
-                                <input type="checkbox">
-                                <label for="">Flip Flops</label>
+                                <input type="checkbox" class="styler" id="sidebar-list__text11">
+                                <label for="sidebar-list__text11">Flip Flops</label>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="accordion__head">
+                        <h5 class="categorie">Brand</h5>
+                    </div>
+                    <div class="accordion__body" style="display: none;">
+                        <ul class="sidebar-list">
+                            <li class="sidebar-list__item">
+                                <input type="checkbox" class="styler" id="sidebar-list__text1">
+                                <label for="sidebar-list__text1">Bags</label>
+                            </li>
+                            <li class="sidebar-list__item">
+                                <input type="checkbox" class="styler" id="sidebar-list__text2">
+                                <label for="sidebar-list__text2">Belts Hats</label>
+                            </li>
+                            <li class="sidebar-list__item">
+                                <input type="checkbox" class="styler" id="sidebar-list__text3">
+                                <label for="sidebar-list__text3">Scarves & Gloves</label>
+                            </li>
+                            <li class="sidebar-list__item">
+                                <input type="checkbox" class="styler" id="sidebar-list__text4">
+                                <label for="sidebar-list__text4">Sunglasses</label>
+                            </li>
+                            <li class="sidebar-list__item">
+                                <input type="checkbox" class="styler" id="sidebar-list__text5">
+                                <label for="sidebar-list__text5">Watches</label>
+                            </li>
+                            <li class="sidebar-list__item">
+                                <input type="checkbox" class="styler" id="sidebar-list__text6">
+                                <label for="sidebar-list__text6">Wallets</label>
+                            </li>
+                            <li class="sidebar-list__item">
+                                <input type="checkbox" class="styler" id="sidebar-list__text7">
+                                <label for="sidebar-list__text7">Boat Shoes</label>
+                            </li>
+                            <li class="sidebar-list__item">
+                                <input type="checkbox" class="styler" id="sidebar-list__text8">
+                                <label for="sidebar-list__text8">Boots</label>
+                            </li>
+                            <li class="sidebar-list__item">
+                                <input type="checkbox" class="styler" id="sidebar-list__text9">
+                                <label for="sidebar-list__text9">Deserts & Chukkas</label>
+                            </li>
+                            <li class="sidebar-list__item">
+                                <input type="checkbox" class="styler" id="sidebar-list__text10">
+                                <label for="sidebar-list__text10">Espadrilles & Sandals</label>
+                            </li>
+                            <li class="sidebar-list__item">
+                                <input type="checkbox" class="styler" id="sidebar-list__text11">
+                                <label for="sidebar-list__text11">Flip Flops</label>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="accordion__head">
+                        <h5 class="categorie">Size</h5>
+                    </div>
+                    <div class="accordion__body" style="display: none;">
+                        <ul class="sidebar-list size">
+                            <li class="sidebar-list__item">
+                                <input type="checkbox" class="styler" id="sidebar-list__text6">
+                                <label for="sidebar-list__text6">S</label>
+                            </li>
+                            <li class="sidebar-list__item">
+                                <input type="checkbox" class="styler" id="sidebar-list__text7">
+                                <label for="sidebar-list__text7">XL</label>
+                            </li>
+                            <li class="sidebar-list__item">
+                                <input type="checkbox" class="styler" id="sidebar-list__text8">
+                                <label for="sidebar-list__text8">M</label>
+                            </li>
+                            <li class="sidebar-list__item">
+                                <input type="checkbox" class="styler" id="sidebar-list__text9">
+                                <label for="sidebar-list__text9">XXL</label>
+                            </li>
+                            <li class="sidebar-list__item">
+                                <input type="checkbox" class="styler" id="sidebar-list__text10">
+                                <label for="sidebar-list__text10">L</label>
+                            </li>
+                            <li class="sidebar-list__item">
+                                <input type="checkbox" class="styler" id="sidebar-list__text11">
+                                <label for="sidebar-list__text11">XXXL</label>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="accordion__head">
+                        <h5 class="categorie">Price</h5>
+                    </div>
+                    <div class="accordion__body" style="display: none;">
+                        <ul class="sidebar-list">
+                            <li class="sidebar-list__item">
+                                <input type="checkbox" class="styler" id="sidebar-list__text1">
+                                <label for="sidebar-list__text1">Bags</label>
+                            </li>
+                            <li class="sidebar-list__item">
+                                <input type="checkbox" class="styler" id="sidebar-list__text2">
+                                <label for="sidebar-list__text2">Belts Hats</label>
+                            </li>
+                            <li class="sidebar-list__item">
+                                <input type="checkbox" class="styler" id="sidebar-list__text3">
+                                <label for="sidebar-list__text3">Scarves & Gloves</label>
+                            </li>
+                            <li class="sidebar-list__item">
+                                <input type="checkbox" class="styler" id="sidebar-list__text4">
+                                <label for="sidebar-list__text4">Sunglasses</label>
+                            </li>
+                            <li class="sidebar-list__item">
+                                <input type="checkbox" class="styler" id="sidebar-list__text5">
+                                <label for="sidebar-list__text5">Watches</label>
+                            </li>
+                            <li class="sidebar-list__item">
+                                <input type="checkbox" class="styler" id="sidebar-list__text6">
+                                <label for="sidebar-list__text6">Wallets</label>
+                            </li>
+                            <li class="sidebar-list__item">
+                                <input type="checkbox" class="styler" id="sidebar-list__text7">
+                                <label for="sidebar-list__text7">Boat Shoes</label>
+                            </li>
+                            <li class="sidebar-list__item">
+                                <input type="checkbox" class="styler" id="sidebar-list__text8">
+                                <label for="sidebar-list__text8">Boots</label>
+                            </li>
+                            <li class="sidebar-list__item">
+                                <input type="checkbox" class="styler" id="sidebar-list__text9">
+                                <label for="sidebar-list__text9">Deserts & Chukkas</label>
+                            </li>
+                            <li class="sidebar-list__item">
+                                <input type="checkbox" class="styler" id="sidebar-list__text10">
+                                <label for="sidebar-list__text10">Espadrilles & Sandals</label>
+                            </li>
+                            <li class="sidebar-list__item">
+                                <input type="checkbox" class="styler" id="sidebar-list__text11">
+                                <label for="sidebar-list__text11">Flip Flops</label>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="accordion__head">
+                        <h5 class="categorie">Color</h5>
+                    </div>
+                    <div class="accordion__body" style="display: none;">
+                        <ul class="sidebar-list">
+                            <li class="sidebar-list__item">
+                                <input type="checkbox" class="styler" id="sidebar-list__text1">
+                                <label for="sidebar-list__text1">Bags</label>
+                            </li>
+                            <li class="sidebar-list__item">
+                                <input type="checkbox" class="styler" id="sidebar-list__text2">
+                                <label for="sidebar-list__text2">Belts Hats</label>
+                            </li>
+                            <li class="sidebar-list__item">
+                                <input type="checkbox" class="styler" id="sidebar-list__text3">
+                                <label for="sidebar-list__text3">Scarves & Gloves</label>
+                            </li>
+                            <li class="sidebar-list__item">
+                                <input type="checkbox" class="styler" id="sidebar-list__text4">
+                                <label for="sidebar-list__text4">Sunglasses</label>
+                            </li>
+                            <li class="sidebar-list__item">
+                                <input type="checkbox" class="styler" id="sidebar-list__text5">
+                                <label for="sidebar-list__text5">Watches</label>
+                            </li>
+                            <li class="sidebar-list__item">
+                                <input type="checkbox" class="styler" id="sidebar-list__text6">
+                                <label for="sidebar-list__text6">Wallets</label>
+                            </li>
+                            <li class="sidebar-list__item">
+                                <input type="checkbox" class="styler" id="sidebar-list__text7">
+                                <label for="sidebar-list__text7">Boat Shoes</label>
+                            </li>
+                            <li class="sidebar-list__item">
+                                <input type="checkbox" class="styler" id="sidebar-list__text8">
+                                <label for="sidebar-list__text8">Boots</label>
+                            </li>
+                            <li class="sidebar-list__item">
+                                <input type="checkbox" class="styler" id="sidebar-list__text9">
+                                <label for="sidebar-list__text9">Deserts & Chukkas</label>
+                            </li>
+                            <li class="sidebar-list__item">
+                                <input type="checkbox" class="styler" id="sidebar-list__text10">
+                                <label for="sidebar-list__text10">Espadrilles & Sandals</label>
+                            </li>
+                            <li class="sidebar-list__item">
+                                <input type="checkbox" class="styler" id="sidebar-list__text11">
+                                <label for="sidebar-list__text11">Flip Flops</label>
                             </li>
                         </ul>
                     </div>
@@ -281,9 +467,10 @@
 	<script src="libs/html5shiv/html5shiv-printshiv.min.js"></script>
 	<![endif]-->
 
-    <script src="libs/jquery/jquery-1.11.2.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="libs/slick/slick.min.js"></script>
+    <script src="js/jquery.formstyler.min.js"></script>
 
     <script src="js/common.js"></script>
 
