add sidebar and footer

--- a/In Working/index.html
+++ b/In Working/index.html
@@ -20,13 +20,15 @@
     <link href="https://fonts.googleapis.com/css?family=PT+Serif:400,400i,700,700i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
     <link rel="stylesheet" href="css/icomoon.css">
-
+    
+    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+    <link rel="stylesheet" href="fonts/fontawesome.min.css">
 
     <link rel="stylesheet" href="libs/slick/slick-theme.css">
     <link rel="stylesheet" href="libs/slick/slick.css">
     <link rel="stylesheet" href="css/jquery.formstyler.theme.css">
     <link rel="stylesheet" href="css/jquery.formstyler.css">
-
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="css/main.css">
 
 
@@ -222,7 +224,7 @@
                     <div class="accordion__head">
                         <h5 class="categorie">Categorie</h5>
                     </div>
-                    <div class="accordion__body">
+                    <div class="accordion__body" style="display: none;">
                         <ul class="sidebar-list">
                             <li class="sidebar-list__item">
                                 <input type="checkbox" class="styler" id="sidebar-list__text1">
@@ -355,53 +357,17 @@
                     <div class="accordion__head">
                         <h5 class="categorie">Price</h5>
                     </div>
-                    <div class="accordion__body" style="display: none;">
-                        <ul class="sidebar-list">
-                            <li class="sidebar-list__item">
-                                <input type="checkbox" class="styler" id="sidebar-list__text1">
-                                <label for="sidebar-list__text1">Bags</label>
-                            </li>
-                            <li class="sidebar-list__item">
-                                <input type="checkbox" class="styler" id="sidebar-list__text2">
-                                <label for="sidebar-list__text2">Belts Hats</label>
-                            </li>
-                            <li class="sidebar-list__item">
-                                <input type="checkbox" class="styler" id="sidebar-list__text3">
-                                <label for="sidebar-list__text3">Scarves & Gloves</label>
-                            </li>
-                            <li class="sidebar-list__item">
-                                <input type="checkbox" class="styler" id="sidebar-list__text4">
-                                <label for="sidebar-list__text4">Sunglasses</label>
-                            </li>
-                            <li class="sidebar-list__item">
-                                <input type="checkbox" class="styler" id="sidebar-list__text5">
-                                <label for="sidebar-list__text5">Watches</label>
-                            </li>
-                            <li class="sidebar-list__item">
-                                <input type="checkbox" class="styler" id="sidebar-list__text6">
-                                <label for="sidebar-list__text6">Wallets</label>
-                            </li>
-                            <li class="sidebar-list__item">
-                                <input type="checkbox" class="styler" id="sidebar-list__text7">
-                                <label for="sidebar-list__text7">Boat Shoes</label>
-                            </li>
-                            <li class="sidebar-list__item">
-                                <input type="checkbox" class="styler" id="sidebar-list__text8">
-                                <label for="sidebar-list__text8">Boots</label>
-                            </li>
-                            <li class="sidebar-list__item">
-                                <input type="checkbox" class="styler" id="sidebar-list__text9">
-                                <label for="sidebar-list__text9">Deserts & Chukkas</label>
-                            </li>
-                            <li class="sidebar-list__item">
-                                <input type="checkbox" class="styler" id="sidebar-list__text10">
-                                <label for="sidebar-list__text10">Espadrilles & Sandals</label>
-                            </li>
-                            <li class="sidebar-list__item">
-                                <input type="checkbox" class="styler" id="sidebar-list__text11">
-                                <label for="sidebar-list__text11">Flip Flops</label>
-                            </li>
-                        </ul>
+                    <div class="accordion__body">
+                        <div id="slider-range"></div>
+
+                        <div class="price__item">
+                            <input type="text" id="amount">
+                            <input type="text" id="amount1">
+                        </div>
+
+
+
+
                     </div>
                     <div class="accordion__head">
                         <h5 class="categorie">Color</h5>
@@ -459,8 +425,27 @@
         </div>
     </main>
 
+    <footer class="footer">
+        <div class="copyright">&copy; 2015 Aware UI Kit.</div>
+        <ul class="support">
+            <li class="support-item">
+                <a href="#" class="support-item__link">Privacy & Cookies </a>
+            </li>
+            <li class="support-item">
+                <a href="#" class="support-item__link">Terms & Conditions</a>
+            </li>
+            <li class="support-item">
+                <a href="#" class="support-item__link">Accessibility</a>
+            </li>
+        </ul>
+        <div class="pay">
+            <a href="#" class="pay-link"><i class="fab fa-cc-visa"></i></a>
+            <a href="#" class="pay-link"><i class="fab fa-cc-mastercard"></i></a>
+            <a href="#" class="pay-link"><i class="fab fa-cc-paypal"></i></a>
+        </div>
+    </footer>
 
-
+              
     <!--[if lt IE 9]>
 	<script src="libs/html5shiv/es5-shim.min.js"></script>
 	<script src="libs/html5shiv/html5shiv.min.js"></script>
@@ -468,6 +453,7 @@
 	<![endif]-->
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="libs/slick/slick.min.js"></script>
     <script src="js/jquery.formstyler.min.js"></script>
