--- a/In Working/index.html
+++ b/In Working/index.html
@@ -35,11 +35,10 @@
 </head>
 
 <body>
-
     <header class="top-menu">
         <div class="logo">
             <a href="#" class="logo__link">
-                <img src="img/Logo.png" alt="logo" class="logo__img">
+                <img src="img/Logo.png" alt="logo" id="logo">
             </a>
         </div>
         <ul class="menu-list">
